fix(#247): keep image MCQ options paired with their text in PDF export
Image options were emitted as separate document elements — a text
paragraph followed by a free-floating image add — so during layout a
picture could reflow next to a different option, scrambling text and
images in image-based MCQs.

When any option in a question carries an image, render each option
(label + text + image) inside a single PdfPTable cell, the same
technique already used for MATCHING questions, so the pieces stay
together. Text-only questions keep the lightweight paragraph flow
(no regression). Deterministic option order is guaranteed by the
orderIndex fix in #258.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>